metadata/force-app/main/default/objects/ccrz__E_PromotionAccountGroupFilter__c/fields/ccrz__CC_AccountGroup__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CC_AccountGroup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Account Group to which this filter applies.</description>
    <label>CC Account Group</label>
    <referenceTo>ccrz__E_AccountGroup__c</referenceTo>
    <relationshipLabel>CC Promotion Account Group Filters</relationshipLabel>
    <relationshipName>E_Promotion_Account_Group_Filters</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>