metadata/force-app/main/default/objects/ccrz__E_PromotionAccountGroupFilter__c/fields/ccrz__CC_Promotion__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CC_Promotion__c</fullName>
    <description>The promotion to which this filter applies.</description>
    <label>CC Promotion</label>
    <referenceTo>ccrz__E_Promo__c</referenceTo>
    <relationshipLabel>CC Promotion Account Group Filters</relationshipLabel>
    <relationshipName>E_PromotionAccountGroupFilters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>