metadata/force-app/main/default/objects/ccrz__E_PromotionAccountGroupFilter__c/fields/ccrz__FilterType__c.field-meta.xml
<CustomField>
    <fullName>ccrz__FilterType__c</fullName>
    <description>The filter type, either Inclusive or Exclusive.</description>
    <label>Filter Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inclusive</fullName>
                <default>true</default>
                <label>Inclusive</label>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>