metadata/force-app/main/default/objects/ccrz__E_PromotionAccountGroupFilter__c/fields/ccrz__StartDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StartDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The start date at which time the filter applies.  The start date is inclusive.  In other words the filter will start being applied on the start date.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>